@@ -50,9 +50,9 @@ module Reek
       def examine_context(klass)
         max_copies = value(MAX_COPIES_KEY, klass, DEFAULT_MAX_COPIES)
         min_clump_size = value(MIN_CLUMP_SIZE_KEY, klass, DEFAULT_MIN_CLUMP_SIZE)
-        MethodGroup.new(klass, min_clump_size, max_copies).clumps.each {|clump, occurs|
+        MethodGroup.new(klass, min_clump_size, max_copies).clumps.each do |clump, occurs|
           found(klass, "takes parameters #{DataClump.print_clump(clump)} to #{occurs} methods")
-        }
+        end
       end
 
       def self.print_clump(clump)
@@ -62,7 +62,7 @@ module Reek
   end
 
   # Represents a group of methods
-  class MethodGroup
+  class MethodGroup   # :nodoc:
 
     def self.intersection_of_parameters_of(methods)
       methods.map {|meth| meth.parameters.names.sort}.intersection
@@ -76,12 +76,12 @@ module Reek
 
     def clumps
       results = Hash.new(0)
-      @klass.parameterized_methods(@min_clump_size).bounded_power_set(@max_copies).each {|methods|
+      @klass.parameterized_methods(@min_clump_size).bounded_power_set(@max_copies).each do |methods|
         clump = MethodGroup.intersection_of_parameters_of(methods)
         if clump.length >= @min_clump_size
           results[clump] = [methods.length, results[clump]].max
         end
-      }
+      end
       results
     end
   end
